# machine-learning-hands-on-

./: README.md  api_design.md  classification.ipynb  housing.ipynb  langchain.ipynb  linearregession.ipynb  main.py  maskedselfattention.ipynb  multiheadattention.ipynb  pyproject.toml  selfattention.ipynb  sequential.ipynb  svm.ipynb
hands on/: IOB (20240207000000000 _ 20210630000000000).csv  MAHABANK (20240207000000000 _ 20240102000000000).csv  UCOBANK (20240207000000000 _ 20210518000000000).csv  iob.ipynb  sample.py
